--- a/自定义位宽整型.ipynb
+++ b/自定义位宽整型.ipynb
@@ -59,8 +59,8 @@
     }
    ],
    "source": [
-    "Int<4>::Max(); \n",
-    "Int<4>::Min();\n",
+    "int<4>::Max(); \n",
+    "int<4>::Min();\n",
     "Uint<256>::Max();\n",
     "Uint<256>::Min();"
    ]
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "use Int<4> as i4;\n",
+    "use int<4> as i4;\n",
     "\n",
     "var tmp = i4::Min();\n",
     "var one = 1i64.Cast<i4>(); // 般若是强类型语言, 不同类型的赋值必须显示转换.\n",
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "use Int<128> as i128;\n",
+    "use int<128> as i128;\n",
     "\n",
     "var i64_max = i64::Max().Cast<i128>();\n",
     "i64_max + i64_max"
@@ -171,9 +171,9 @@
     }
    ],
    "source": [
-    "// use Float<16> as f16;\n",
-    "// use Float<32> as f32;\n",
-    "// use Float<64> as f64; // 系统已定义\n",
+    "// use float<16> as f16;\n",
+    "// use float<32> as f32;\n",
+    "// use float<64> as f64; // 系统已定义\n",
     "\n",
     "f16::Largest();\n",
     "f16::Smallest(); // float打印的精度不够, float打印还存在不少问题, 需要后面修复"
